...
    <string name="str_empty_contact_list">Contacts list is empty</string>
    <string name="str_last_contacted_on">Last contacted</string>
    <string name="str_contact_now">Contact Now</string>
    <string name="str_top_contacted">Top frequently contacted</string>

    <string name="str_all_contacts">All Contacts</string>
    <string name="str_create_group">Create Group</string>
    <string name="str_group_name">Contact Group Name</string>
    <string name="str_contact_group_add">Create</string>
    <string name="str_contact_group_update">Update</string>
    <string name="str_group_members">Group Members</string>
    <string name="str_members">Members</string>
    <string name="str_contact_group_select_members">Select</string>
    <string name="str_contact_group_add_member">Add</string>
    <string name="str_contact_group_title">Manage Groups</string>
    <string name="str_contact_group_name">Enter Group Name</string>
    <string name="str_contact_group_create_title">Create Group</string>
    <string name="str_contact_group_edit_title">Edit Group</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_select_contact_group">Select a group to generate Random Contacts from, or create a new contact group.</string>
    <string name="str_empty_list_groups">No Custom Groups created so far.</string>
...
