...
            android:paddingStart="@dimen/unit_l"
            android:paddingLeft="@dimen/unit_l"
            android:paddingEnd="@dimen/unit_l"
            android:paddingRight="@dimen/unit_l">

            <TextView
                android:id="@+id/txtManageGroups"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
...
                android:text="@string/str_contact_group_title"
                android:textAllCaps="true"
                android:textColor="?attr/colorSecondary"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/btnAddGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/str_content_desc_btn_add_group"
...
